# DRAUPNIR_ASR

./: .gitignore  Benchmark.py  BenchmarkTimeTable.txt  Draupnir.py  Draupnir_VAE_CORRECT.py  Draupnir_datasets.py  Draupnir_example.py  Draupnir_main.py  Draupnir_plots.py  Draupnir_utils.py  MutualInformation_2.py  README.md  SUPERPOSITION.py  calculate_coords.py  requirements.txt
draupnir/: LICENSE  MANIFEST.in  README.md  build_library.txt  setup.cfg  setup.py
draupnir/draupnir/: Draupnir_3D.py  Draupnir_datasets.py  Draupnir_guides.py  Draupnir_main.py  Draupnir_models_utils.py  Drawing_tree.py  __init__.py
draupnir/env/Python3_9/: env.yaml  install.sh  requirements.txt
draupnir/src/draupnir/: 3D.py  Calculate_Patristic.R  Draupnir_3D.py  Draupnir_OrdinaryVAE.py  Draupnir_OrdinaryVAEmodels.py  Draupnir_VAE_CORRECT.py  Draupnir_ablation.py  Draupnir_datasets.py  Draupnir_draw_tree.py  Draupnir_guides.py  Draupnir_load_utils.py  Draupnir_main.py  Draupnir_models.py  Draupnir_models_utils.py  Draupnir_plots.py  Draupnir_train.py  Draupnir_utils.py  Drawing_tree.py  Drawing_tree_stripped.py  Tree_Distance.R  __init__.py  datasets.py  draw_tree.py  guides.py  load_utils.py  main.py  models.py  models_utils.py  mutual_information.py  plots.py  train.py  utils.py
draupnir/src/draupnir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
draupnir/src/draupnir/ablation_studies/: Draupnir_OrdinaryVAE.py  Draupnir_ablation.py  (+1 more)
draupnir/tests/: coverage_test.txt  info_on_unittesting.txt  test_accuracy.py  test_examples.py  test_load.py  test_norworking.py
(+37 files in other folders)
