[metadata]
name = draupnir-artistworking43
version = 0.0.27
author = Lys Sanz Moreta
author_email = lys.sanz.moreta@outlook.com
description = Draupnir: Ancestral protein sequence reconstruction using a tree-structured Ornstein-Uhlenbeck variational autoencoder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LysSanzMoreta/DRAUPNIR_ASR
project_urls =
    Bug Tracker = https://github.com/LysSanzMoreta/DRAUPNIR_ASR/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True


